--- a/CSS/style.css
+++ b/CSS/style.css
@@ -151,3 +151,30 @@ th{
     background-color: rgb(54, 93, 56);
     color: #BDECB6;
 }
+
+.embed-container {
+ position: relative;
+ padding-bottom: 56.25%;
+ height: 0;
+ overflow: hidden;
+ max-width: 100%;
+ height: auto;
+ margin-top: 30px;
+ margin-bottom: 30px;
+}
+
+.embed-container iframe, .embed-container object, .embed-container embed {
+ position: absolute;
+ top: 0;
+ left: 0;
+ width: 100%;
+ height: 100%;
+}
+
+.imgresponsivo{
+    max-widht:100%;
+    height: auto;
+    float: center;
+    margin: auto;
+    display:flex;
+}
